# pm_project

./: CMakeLists.txt  README.md  dataset.ods
components/edge_impulse/: CMakeLists.txt
components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impulse/tflite-model/: tflite_learn_15_compiled.cpp  tflite_learn_15_compiled.h  tflite_learn_18_compiled.cpp  tflite_learn_18_compiled.h
components/hd44780/: CMakeLists.txt  hd44780.c
components/pms5003/: CMakeLists.txt  pms5003.c
components/pms5003/include/: pms5003.h
main/: CMakeLists.txt  aqi_html.h  pm_project.c  pm_project.cpp
